--- a/package/crds/caddy.crossplane.io_clusterproviderconfigs.yaml
+++ b/package/crds/caddy.crossplane.io_clusterproviderconfigs.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.18.0
-  name: clusterproviderconfigs.template.crossplane.io
+  name: clusterproviderconfigs.caddy.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: caddy.crossplane.io
   names:
     categories:
     - crossplane
     - provider
-    - template
+    - caddy
     kind: ClusterProviderConfig
     listKind: ClusterProviderConfigList
     plural: clusterproviderconfigs
@@ -29,7 +29,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A ClusterProviderConfig configures a Template provider.
+        description: A ClusterProviderConfig configures a Caddy provider.
         properties:
           apiVersion:
             description: |-
